[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.10.1"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
log = "0.4"
chrono = "0"
tokio = { version = "1", features = ["full"] }
regex = "1.8.1"
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
anyhow = "1"
rand = { version = "0" }

hyper = { version = "1", features = ["full"] }
http-body-util = "0"
hyper-util = { version = "0", features = ["full"] }

reqwest = { version = "0", features = ["json"] }
nom = "7.1.3"
uuid = { version = "1", features = [
    "v4",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }